--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "node": "nodemon ./bin/www",
+    "dev": "ng build --env=dev -w -output-path dist/",
+    "prod": "ng build --prod --env=prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -22,7 +25,14 @@
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "body-parser": "~1.16.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.0",
+    "express": "~4.14.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.1",
