--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "core-js": "^2.4.1",
     "debug": "~2.6.0",
+    "dse-driver": "^1.2.0",
+    "dse-graph": "^1.0.0-alpha1",
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "rxjs": "^5.1.0",
+    "serve-favicon": "~2.3.2",
+    "winston": "^2.3.1",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.1",
